--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ author:
   reddit:           your-id
   medium:           your-id
   tumblr:           your-id
-  email:            your-id@your-email.com
+  email:            bun920528@gmail.com
 
 copyright:
   year:             2017
-  name:             Kiko
+  name:             변승환
 
 # Google-analytics
 google-analytics:
